ext/css/display.css
/* ... */
button.action-button:disabled {
    pointer-events: none;
    cursor: default;
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
    background-color: transparent;
}
button.action-button:disabled:not([hidden]) {
    opacity: 0.25;
}
button.action-button:hover,
button.action-button:focus {
    background-color: transparent;
    box-shadow: none;
}
button.action-button:focus-visible {
    background-color: var(--action-button-hover-color);
    box-shadow: none;
}
button.action-button:active {
    background-color: var(--action-button-active-color);
    box-shadow: none;
}
.icon[data-icon=view-note]      { background-image: url('/images/view-note.svg'); }
.icon[data-icon=add-term-kanji] { background-image: url('/images/add-term-kanji.svg'); }
.icon[data-icon=add-term-kana]  { background-image: url('/images/add-term-kana.svg'); }
.icon[data-icon=add-kanji]  { background-image: url('/images/add-term-kanji.svg'); }
.icon[data-icon=overwrite-term-kanji] { background-image: url('/images/overwrite-term-kanji.svg'); }
.icon[data-icon=overwrite-term-kana]  { background-image: url('/images/overwrite-term-kana.svg'); }
.icon[data-icon=overwrite-kanji]  { background-image: url('/images/overwrite-term-kanji.svg'); }
.icon[data-icon=add-duplicate-term-kanji] { background-image: url('/images/add-duplicate-term-kanji.svg'); }
.icon[data-icon=add-duplicate-term-kana]  { background-image: url('/images/add-duplicate-term-kana.svg'); }
.icon[data-icon=add-duplicate-kanji]  { background-image: url('/images/add-duplicate-term-kanji.svg'); }
.icon[data-icon=play-audio]     { background-image: url('/images/play-audio.svg'); }
.icon[data-icon=source-term]    { background-image: url('/images/source-term.svg'); }
.icon[data-icon=entry-current]  { background-image: url('/images/entry-current.svg'); }
.action-icon {
    display: block;
    width: var(--action-button-size);
    height: var(--action-button-size);
}
.action-icon:not(.color-icon) {
    background-color: var(--text-color);
}
:root[data-result-output-mode=merge] .entry[data-type=term] .actions>button.action-button[data-action=play-audio] {
    display: none;
}
.action-button-badge {
    pointer-events: none;
    position: absolute;
    display: block;
    right: 0;
    top: 0;
    width: calc(8em / var(--font-size-no-units));
    height: calc(8em / var(--font-size-no-units));
}
.action-button-badge[data-icon=cross] {
    background-color: var(--danger-color);
}
.action-button-badge[data-icon=plus-thick] {
    background-color: var(--success-color);
}


/* Tags */
.tag {
    --tag-color: var(--tag-default-background-color);

    display: inline-flex;
    flex-flow: row nowrap;
    align-items: stretch;
    border: none;
    border-right: none;
    font-size: 1em;
    min-height: var(--tag-height);
    margin: calc(1em / var(--font-size-no-units)) 0.375em calc(1em / var(--font-size-no-units)) 0;
}
.tag-label {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    background-color: var(--tag-color);
    border-radius: var(--tag-border-radius);
    padding: calc(2.5em / var(--font-size-no-units)) 0.375em calc(2.5em / var(--font-size-no-units)) 0.375em;
    color: var(--tag-text-color);
    cursor: pointer;
}
.tag-label-content {
    display: block;
    font-size: var(--tag-font-size);
    font-weight: var(--tag-font-weight);
}
.tag-body {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    position: relative;
    padding: 0 0.375em 0 0.375em;
    border-radius: var(--tag-border-radius);
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
.tag-body::before {
    content: '';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    border-radius: var(--tag-border-radius);
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border: var(--tag-border-size) var(--tag-border-style) var(--tag-color);
    border-left: none;
    pointer-events: none;
}
.tag-body-content {
    display: block;
    position: relative;
}
.tag:not(.tag-has-body)>.tag-body {
    display: none;
}
.tag.tag-has-body>.tag-label {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
.tag[data-category=name] {
    --tag-color: var(--tag-name-background-color);
}
.tag[data-category=expression] {
    --tag-color: var(--tag-expression-background-color);
}
.tag[data-category=popular] {
    --tag-color: var(--tag-popular-background-color);
}
.tag[data-category=frequent] {
    --tag-color: var(--tag-frequent-background-color);
}
.tag[data-category=archaism] {
    --tag-color: var(--tag-archaism-background-color);
}
.tag[data-category=dictionary] {
    --tag-color: var(--tag-dictionary-background-color);
}
.tag[data-category=frequency] {
    --tag-color: var(--tag-frequency-background-color);
}
.tag[data-category=partOfSpeech] {
    --tag-color: var(--tag-part-of-speech-background-color);
}
.tag[data-category=search] {
    --tag-color: var(--tag-search-background-color);
}
.tag[data-category=pronunciation-dictionary] {
    --tag-color: var(--tag-pronunciation-dictionary-background-color);
}


/* Entries */
.entry {
    padding: var(--entry-vertical-padding) var(--entry-horizontal-padding);
    position: relative;
    content-visibility: auto;
    contain-intrinsic-height: auto 500px;
}
.entry+.entry {
    border-top: var(--thin-border-size) solid var(--light-border-color);
}
.entry-body {
    clear: both;
}
.entry[data-definition-count='0'] .entry-body-section[data-section-type=definitions],
.entry[data-frequency-count='0'] .entry-body-section[data-section-type=frequencies],
.entry[data-pronunciation-count='0'] .entry-body-section[data-section-type=pronunciations] {
    display: none;
}


/* Inflections */
.inflection-rule-chains {
    padding-inline-start: 0;
    list-style-type: none;
}
.inflection-rule-chain {
    color: var(--reason-text-color);
}
.inflection-rule-chain:empty {
    display: none;
}
/* ... */

